--- a/Friday.ERP.Client/Friday.ERP.Client.csproj
+++ b/Friday.ERP.Client/Friday.ERP.Client.csproj
@@ -14,10 +14,7 @@
         <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.0"/>
         <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="8.0.0"/>
         <PackageReference Include="MudBlazor" Version="6.12.0"/>
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
         <PackageReference Include="Toolbelt.Blazor.HttpClientInterceptor" Version="10.2.0"/>
-    </ItemGroup>
-
-    <ItemGroup>
-        <ProjectReference Include="..\..\Friday.ERP.Server\Friday.ERP.Shared\Friday.ERP.Shared.csproj"/>
     </ItemGroup>
 </Project>
