--- a/Friday.ERP.Client/Friday.ERP.Client.csproj
+++ b/Friday.ERP.Client/Friday.ERP.Client.csproj
@@ -18,4 +18,8 @@
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
         <PackageReference Include="Toolbelt.Blazor.HttpClientInterceptor" Version="10.2.0"/>
     </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\Friday.ERP.Server\Friday.ERP.Shared\Friday.ERP.Shared.csproj" />
+    </ItemGroup>
 </Project>
