--- a/Friday.ERP.Client/wwwroot/appsettings.json
+++ b/Friday.ERP.Client/wwwroot/appsettings.json
@@ -1,4 +1,4 @@
 ﻿{
-  "BaseAddressUrl": "http://localhost:5259/api/",
-  "NotificationUrl": "http://localhost:5259/"
+  "BaseAddressUrl": "https://localhost:7080/api/",
+  "NotificationUrl": "https://localhost:7080/"
 }
