--- a/Friday.ERP.Client/Friday.ERP.Client.csproj
+++ b/Friday.ERP.Client/Friday.ERP.Client.csproj
@@ -5,6 +5,7 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <PublishTrimmed>true</PublishTrimmed>
+        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
     <ItemGroup>
@@ -21,13 +22,5 @@
 
     <ItemGroup>
         <ProjectReference Include="..\..\Friday.ERP.Server\Friday.ERP.Shared\Friday.ERP.Shared.csproj"/>
-    </ItemGroup>
-
-    <ItemGroup>
-        <_ContentIncludedByDefault Remove="Pages\CustomerVendorManagement\Components\CustomerVendorComponent.razor"/>
-    </ItemGroup>
-
-    <ItemGroup>
-        <AdditionalFiles Include="Pages\Purchase\Components\Templates\CustomCardRectangle.razor"/>
     </ItemGroup>
 </Project>
